Fix deployment script to copy all files

--- a/invoice/.cpanel.yml
+++ b/invoice/.cpanel.yml
@@ -3,3 +3,4 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/bryce603/brycecodes.com/ryan
     - /bin/cp -R images $DEPLOYPATH
+    - /bin/cp index.html script.js styles.css config.js $DEPLOYPATH
